TA-518: fix lists style when the text is too long

--- a/commons-extension-webapp/src/main/webapp/ckeditorCustom/contents.css
+++ b/commons-extension-webapp/src/main/webapp/ckeditorCustom/contents.css
@@ -185,5 +185,4 @@ a > img {
 
 ul li {
 	list-style-type: disc;
-	list-style-position: inside;
 }
